Finished the analysis

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,7 +10,6 @@
     "\n",
     "1. We want to see if the percolation threshold depends on the size.\n",
     "2. We want to analyze the distribution when the sample size gets increasingly bigger.\n",
-    "3. How the time needed before the system percolates varies on the size (fixing a threshold) or viceversa.\n",
     "\n",
     "For this purpose we want to import the `api_utils` library, which implements the `APIConnector` class."
    ]
@@ -169,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Distribution Analysis as the sample size varies.\n",
+    "## 2. Distribution Analysis as the sample size varies\n",
     "\n",
     "Let's now see what varying the sample size causes to the distribution. Even though this is a purely statistical matter, we also want to see the shape of the distribution and we want to compare it with the Normal Distribution.\n",
     "\n",
@@ -291,7 +290,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Conclusions\n",
+    "\n",
+    "We have answered the two questions, in particular we noticed how percolation threshold does not depend on size even in a cubic space. This is pretty straightforward: the percolation threshold is just the proportion of open sites, and therefore the implications are pretty clear. By using the R shiny dashboard, it is easy to visualize the distribution of the data as the percolation grid size and the sample size vary."
+   ]
   }
  ],
  "metadata": {
